# bazel-experiments

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  justfile
custom_rules/: BUILD.bazel  file.cc.tpl  foo.bzl
go/: BUILD.bazel
go/echo_server/: BUILD.bazel  echo_server.go  transmission_object.go
go/hello/: BUILD.bazel  hello_world.go
java/: BUILD.bazel
java/echo_client/: BUILD.bazel
java/echo_client/src/: EchoClient.java
java/hello/: BUILD.bazel
java/hello/src/: HelloWorld.java  IntMultiplierTest.java
java/src/: HelloWorld.java
proto/: BUILD.bazel  transmission_object.proto
src/: BUILD.bazel  IntMultiplier.java  IntMultiplierTest.java
