###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# io_bazel_rules_go still using deprecated rules_proto version 6.0.0
# bazel_dep(name = "rules_proto", version = "6.0.0")
# bazel_dep(name = "bazel_features", version = "1.11.0")
# bazel_dep(name = "protobuf", version = "23.1", dev_dependency = True, repo_name = "com_google_protobuf")

# bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
# bazel_dep(name = "rules_proto", version = "7.0.2")
# bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
# bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")

bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
