###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# Protobuf dependencies
bazel_dep(
    name = "protobuf",
    version = "28.2",
    # We need to give the repository an explicit name that rules_closure can find
    repo_name = "com_google_protobuf",
)
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.38.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# v2
go_deps.module(
    path = "google.golang.org/protobuf",
    sum = "h1:g0LDEJHgrBl9N9r17Ru3sqWhkIx2NB67okBHPwC7hs8=",
    version = "v1.31.0",
)
use_repo(
    go_deps,
    "org_golang_google_protobuf",
)
