###############################################################################
# Bazel module configuration
###############################################################################

# Go rules
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")

# Register Go toolchain
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

# Gazelle extension for managing Go dependencies
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "google.golang.org/protobuf",
    sum = "h1:g0LDEJHgrBl9N9r17Ru3sqWhkIx2NB67okBHPwC7hs8=",
    version = "v1.31.0",
)
use_repo(
    go_deps,
    "org_golang_google_protobuf",
)

# Proto rules
bazel_dep(name = "rules_proto", version = "7.0.2")

# Protobuf dependencies
bazel_dep(
    name = "protobuf",
    version = "29.0",
    repo_name = "com_google_protobuf",
)

# Package rules
bazel_dep(name = "rules_pkg", version = "1.0.1")
