load("@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive", "http_file",
)
load("@bazel_tools//tools/build_defs/repo:git.bzl",
    "git_repository",
)

http_archive(
    name = "io_bazel_rules_go",
    urls = ["https://github.com/bazel-contrib/rules_go/releases/download/v0.50.1/rules_go-v0.50.1.zip"],
    sha256 = "f4a9314518ca6acfa16cc4ab43b0b8ce1e4ea64b81c38d8a3772883f153346b8",
)

git_repository(
    name = "io_bazel_rules_go",
    remote = "https://github.com/bazel-contrib/rules_go",
    # tag = "v0.50.1",
    commit = "1e855e21ad8273e470d0b417235304cd0fbd55b0",
)

load("@io_bazel_rules_go//go:deps.bzl",
    "go_rules_dependencies", "go_register_toolchains",
)

go_rules_dependencies()
go_register_toolchains("1.23.3")

http_archive(
    name = "rules_proto",
    strip_prefix = "rules_proto-7.0.2",
    urls = ["https://github.com/bazelbuild/rules_proto/releases/download/7.0.2/rules_proto-7.0.2.tar.gz"],
    sha256 = "0e5c64a2599a6e26c6a03d6162242d231ecc0de219534c38cb4402171def21e8",
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies")
rules_proto_dependencies()

load("@rules_proto//proto:setup.bzl", "rules_proto_setup")
rules_proto_setup()
