load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load(":foo.bzl", "foo_binary", "hello_world")

print("BUILD file")

foo_binary(
    name = "bin1",
    username = "Alice",
)

foo_binary(
    name = "bin2",
    username = "Bob",
)

hello_world(
    name = "hello",
    template = "file.cc.tpl",
    username = "Alice",
)

exports_files(["file.cc.tpl"])

cc_binary(
    name = "hello_bin",
    srcs = [":hello"],
)
