load("@rules_proto//proto:defs.bzl", "proto_library")
proto_library(
    name = "transmission_object",
    srcs = ["transmission_object.proto"],
    deps = [
        # "@com_google_protobuf//:protobuf",
    ],
    visibility = [
        "//go/echo_server:__pkg__",
        "//java/echo_client:__pkg__",
    ],
)
