load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "transmission_object",
    srcs = ["transmission_object.proto"],
    visibility = [
        "//go/echo_server:__pkg__",
        "//java/echo_client:__pkg__",
    ],
)

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "github.com/example/project/proto",
    proto = ":transmission_object",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":transmission_object_go_proto"],
    importpath = "github.com/example/project/proto",
    visibility = ["//visibility:public"],
)
