load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
)
load(
    "@io_bazel_rules_go//proto:def.bzl",
    "go_proto_library",
)

go_binary(
    name = "echo_server",
    embed = [":echo_server_lib"],
    visibility = ["//visibility:public"],
    deps = [
        ":echo_server_lib",
        # "@com_google_protobuf//:go_default_library",
    ],
)

go_library(
    name = "echo_server_lib",
    srcs = ["echo_server.go"],
    importpath = "github.com/example/project/go/echo_server",
    visibility = ["//visibility:private"],
    deps = [
        ":proto",
    ],
)

go_library(
    name = "proto",
    embed = [":transmission_object_go_proto"],
    importpath = "github.com/example/project/proto/transmission_object",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "github.com/example/project/proto/transmission_object",
    proto = "//proto:transmission_object",
)
