load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
)
load(
    "@io_bazel_rules_go//proto:def.bzl",
    "go_proto_library",
)

# go_binary(
#     name = "echo_server",
#     embed = [":echo_server_lib"],
#     visibility = ["//visibility:public"],
#     deps = [
#         ":echo_server_lib",
#     ],
# )

# go_library(
#     name = "echo_server_lib",
#     srcs = ["echo_server.go"],
#     importpath = "github.com/example/project/go/echo_server",
#     visibility = ["//visibility:private"],
#     deps = [
#         ":transmission_object_go_proto",
#     ],
# )

# ERROR: /private/var/tmp/_bazel_phatblat/743c11e0af107b303e98bc4569fd1d28/external/com_github_golang_protobuf/proto/BUILD.bazel:3:11: in deps attribute of go_library rule @@com_github_golang_protobuf//proto:proto: '@@gazelle~~go_deps~org_golang_google_protobuf//encoding/prototext:prototext' does not have mandatory providers: 'GoLibrary'. Since this rule was created by the macro 'go_library_macro', the error might have been caused by the macro implementation
# ERROR: /private/var/tmp/_bazel_phatblat/743c11e0af107b303e98bc4569fd1d28/external/com_github_golang_protobuf/proto/BUILD.bazel:3:11: Analysis of target '@@com_github_golang_protobuf//proto:proto' failed
# go_proto_library(
#     name = "transmission_object_go_proto",
#     importpath = "github.com/example/project/proto/transmission_object",
#     proto = "//proto:transmission_object",
#     deps = [
#         "@org_golang_google_protobuf//proto",
#     ],
#     visibility = ["//visibility:public"],
# )
