load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_binary",
    "go_library",
)
load(
    "@io_bazel_rules_go//proto:def.bzl",
    "go_proto_library",
)

go_binary(
    name = "echo_server",
    embed = [":echo_server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "echo_server_lib",
    srcs = ["echo_server.go"],
    importpath = "github.com/example/project/go/echo_server",
    visibility = ["//visibility:private"],
    deps = [
        ":transmission_object_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "github.com/example/project/proto/transmission_object",
    proto = "//proto:transmission_object",
    deps = [
        "@org_golang_google_protobuf//proto",
    ],
    visibility = ["//visibility:public"],
)
