java_binary(
    name = "echo_client",
    srcs = ["src/EchoClient.java"],
    main_class = "EchoClient",
    deps = [
        ":transmission_object",
        "//third_party:gson",
        # "@maven//:com.google.guava_guava",
    ],
)

java_library(
    name = "transmission_object",
    srcs = ["src/TransmissionObject.java"],
)

java_proto_library(
    name = "transmission_object_java_proto",
    deps = ["//proto:transmission_object"],
)
