load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_java//java:java_test.bzl", "java_test")

java_binary(
    name = "hello",
    srcs = ["src/HelloWorld.java"],
    main_class = "HelloWorld",
    deps = [":LibraryExample"],
)

java_library(
    name = "LibraryExample",
    srcs = ["src/IntMultiplier.java"],
)

java_test(
    name = "LibraryExampleTest",
    srcs = ["src/IntMultiplierTest.java"],
    test_class = "IntMultiplierTest",
    deps = [
        ":LibraryExample",
        # "//third_party:junit4", # Why does the test work without this?
    ],
)
